# PixelArtify

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: USAGE.md
include/PixelArtify/: image_processor.h
src/: image_processor.cpp  main.cpp
tests/: test_image_processor.cpp
